--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <module>week02</module>
         <module>week04</module>
         <module>week03</module>
+        <module>week06</module>
     </modules>
 
     <properties>
