--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>week04</module>
         <module>week03</module>
         <module>week06</module>
+        <module>week07</module>
     </modules>
 
     <properties>
