--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <module>week03</module>
         <module>week06</module>
         <module>week07</module>
+        <module>week08</module>
     </modules>
 
     <properties>
