--- a/homework/homework0802/src/main/resources/sharding-config.yaml
+++ b/homework/homework0802/src/main/resources/sharding-config.yaml
@@ -1,42 +1,40 @@
-# 配置真实数据源
 dataSources:
-  # 配置第 1 个数据源
-  ds_0: com.zaxxer.hikari.HikariDataSource
-    jdbcUrl: jdbc:mysql://localhost:3306/shopping_0?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
-    driverClassName: com.mysql.jdbc.Driver
+  ds_0: !!com.zaxxer.hikari.HikariDataSource
+    driverClassName: com.mysql.cj.jdbc.Driver
+    jdbcUrl: jdbc:mysql://localhost:3306/ds_0?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF-8
     username: root
-    password: root
-  # 配置第 2 个数据源
-  ds_1: com.zaxxer.hikari.HikariDataSource
-    driverClassName: com.mysql.jdbc.Driver
-    jdbcUrl: jdbc:mysql://localhost:3306/shopping_1?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=false&allowPublicKeyRetrieval=true
+    password: 1qaz2wsx
+  ds_1: !!com.zaxxer.hikari.HikariDataSource
+    driverClassName: com.mysql.cj.jdbc.Driver
+    jdbcUrl: jdbc:mysql://localhost:3306/ds_1?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF-8
     username: root
-    password: root
+    password: 1qaz2wsx
 
 rules:
   # 配置分片规则
   - !SHARDING
     tables:
-      # 配置 order_info 表规则
+      # 配置 t_order 表规则
       t_order:
-        actualDataNodes: ds_${0..1}.order_info_${0..15}
+        actualDataNodes: ds_${0..1}.t_order_${0..1}
         # 配置分库策略
         databaseStrategy:
           standard:
-            shardingColumn: user_info_id
+            shardingColumn: user_id
             shardingAlgorithmName: database_inline
         # 配置分表策略
         tableStrategy:
           standard:
-            shardingColumn: id
+            shardingColumn: order_id
             shardingAlgorithmName: table_inline
+
     # 配置分片算法
     shardingAlgorithms:
       database_inline:
         type: INLINE
         props:
-          algorithm-expression: ds_${user_info_id % 2}
+          algorithm-expression: ds_${user_id % 2}
       table_inline:
         type: INLINE
         props:
-          algorithm-expression: order_info_${user_info_id % 16}
+          algorithm-expression: t_order_${order_id % 2}
